iac-kubernetes/manifest/scr/harbor-ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: harbor-ingress-route
  namespace: harbor-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  tls:
    secretName: local-gunturpoetra-com-production-tls
  routes:
    # portal
    - match: Host(`scr.local.gunturpoetra.com`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: harbor-portal
          namespace: harbor-system
          port: 80
    # core
    - match: Host(`scr.local.gunturpoetra.com`) && PathPrefix(`/c/`)
      kind: Rule
      services:
        - name: harbor-core
          namespace: harbor-system
          port: 80
    - match: Host(`scr.local.gunturpoetra.com`) && PathPrefix(`/api/`)
      kind: Rule
      services:
        - name: harbor-core
          namespace: harbor-system
          port: 80
    - match: Host(`scr.local.gunturpoetra.com`) && PathPrefix(`/service/`)
      kind: Rule
      services:
        - name: harbor-core
          namespace: harbor-system
          port: 80
    - match: Host(`scr.local.gunturpoetra.com`) && PathPrefix(`/v2/`)
      kind: Rule
      services:
        - name: harbor-core
          namespace: harbor-system
          port: 80
    - match: Host(`scr.local.gunturpoetra.com`) && PathPrefix(`/chartrepo/`)
      kind: Rule
      services:
        - name: harbor-core
          namespace: harbor-system
          port: 80
